--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>ru.filit</groupId>
-  <artifactId>liga-notifications</artifactId>
+  <groupId>com.example.truck</groupId>
+  <artifactId>truck</artifactId>
   <packaging>jar</packaging>
   <version>1.0.0-SNAPSHOT</version>
 
@@ -124,7 +124,7 @@
   </dependencyManagement>
 
   <build>
-    <finalName>notifications</finalName>
+    <finalName>truck</finalName>
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
@@ -137,7 +137,7 @@
           </execution>
         </executions>
         <configuration>
-          <mainClass>ru.filit.notifications.NotificationApp</mainClass>
+          <mainClass>com.example.truck.Application</mainClass>
           <classifier>exec</classifier>
         </configuration>
       </plugin>
