Добавлен экран по работе с заказами, основные операции(создание, сохранение, удаление)

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -12,3 +12,5 @@ spring.liquibase.drop-first=true
 keycloak.auth-server-url=http://localhost:9080/auth
 keycloak.realm=tesler
 keycloak.resource=tesler-keycloak-client
+
+tesler.meta.dev-panel-enabled=true
