добавлены экраны для работы с грузами

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.liquibase.enabled=true
-spring.liquibase.drop-first=true
+spring.liquibase.drop-first=false
 keycloak.auth-server-url=http://localhost:9080/auth
 keycloak.realm=tesler
 keycloak.resource=tesler-keycloak-client
